redirect logo para sb

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="img/banner_mulher.svg" class="banner-img" alt="Mulher feliz">
                 <img src="img/banner_mulher_mobile.svg" class="banner-img-mobile" alt="Mulher feliz">
                 <div class="text-block">
-                    <img src="img/logo_sb.svg" class="logo-img" alt="Logo Social Bank">
+                    <img src="img/logo_sb.svg" class="logo-img" alt="Logo Social Bank" id="logo" >
                     <p class="text">O Banco que paga seu salário antes de todo mundo e garante descontos que facilitam seu dia a dia.</p>
                     <img src="img/whatsapp_button.svg" class="button" alt="Botão" id="button" >
                 </div>
